@@ -2,7 +2,7 @@
 <p>Security issues should be considered carefully before it being used in significant applications. Some measures had been taken, but I hope you to review my codes and eliminate the hidden dangers. If you are interested in Imagoxy, welcome to join the small project at SourceForge and contribute your codes! Thanks. :)</p>
 <p>I do not profit from my open source works. But if you really think they are useful, you can <a href="http://www.linjian.org/donate/">click here</a>.</p>
 
-<p style="color: #FF0000;">Imagoxy Version 0.53 - Update: 2009/12/10<br />Imagoxy-WP Version 0.53 - Update: 2009/12/10</p>
+<p style="color: #FF0000;">Imagoxy Version 0.54 - Update: 2011-03-02<br />Imagoxy-WP Version 0.54 - Update: 2011-03-02</p>
 
 <p><strong>Imagoxy</strong></p>
 
